[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/3D Models/Characters/Simba/Simba.glb" type="PackedScene" id=1]
[ext_resource path="res://assets/Scripts/Characters/Simba/Simba.gd" type="Script" id=2]
[ext_resource path="res://assets/Scripts/Characters/Simba/SimbaHealthBar.gd" type="Script" id=3]
[ext_resource path="res://assets/Contents/Img/HealthBarBack.png" type="Texture" id=4]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="ViewportTexture" id=16]
viewport_path = NodePath("HealthBar")

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "Coyote_Selection"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "Coyote_Selection"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Coyote_Idle"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Coyote_Idle"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Coyote_Walk"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Coyote_Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=8]
switch_mode = 1
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=9]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 1
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
auto_advance = true
xfade_time = 0.5
priority = 10

[sub_resource type="AnimationNodeStateMachine" id=14]
states/Howl/node = SubResource( 3 )
states/Howl/position = Vector2( 69, 184 )
states/Howl-Loop/node = SubResource( 2 )
states/Howl-Loop/position = Vector2( 246.2, 184 )
states/Pose/node = SubResource( 5 )
states/Pose/position = Vector2( 69, 40 )
states/Pose-Loop/node = SubResource( 4 )
states/Pose-Loop/position = Vector2( 246.2, 40 )
states/Walk/node = SubResource( 7 )
states/Walk/position = Vector2( 69, 112 )
states/Walk-Loop/node = SubResource( 6 )
states/Walk-Loop/position = Vector2( 246.2, 112 )
transitions = [ "Pose", "Pose-Loop", SubResource( 8 ), "Pose-Loop", "Pose", SubResource( 9 ), "Walk", "Walk-Loop", SubResource( 10 ), "Walk-Loop", "Walk", SubResource( 11 ), "Howl", "Howl-Loop", SubResource( 12 ) ]
start_node = "Pose"
graph_offset = Vector2( -16.8002, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=15]

[sub_resource type="CapsuleShape" id=17]
radius = 1.86976
height = 0.002

[sub_resource type="CapsuleShape" id=18]
radius = 0.795948
height = 0.002

[node name="Simba" type="KinematicBody" groups=["Player"]]
script = ExtResource( 2 )

[node name="Model" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.345522, 0, 0 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 0.173165, 0, 0, 0, -2.62585e-08, -0.300362, 0, 0.532035, -1.1628e-08, 0, 0.330622, 0.00972347 )
shape = SubResource( 1 )

[node name="HealthBar" type="Viewport" parent="."]
size = Vector2( 650, 550 )
transparent_bg = true
render_target_v_flip = true
script = ExtResource( 3 )

[node name="Bar" type="TextureProgress" parent="HealthBar"]
margin_right = 1600.0
margin_bottom = 1400.0
rect_scale = Vector2( 0.4, 0.4 )
texture_progress = ExtResource( 4 )
fill_mode = 3
tint_progress = Color( 0.611765, 0.188235, 0.188235, 1 )

[node name="Display" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.709999, 0 )
pixel_size = 0.0005
billboard = 1
alpha_cut = 1
texture = SubResource( 16 )

[node name="Track" type="NavigationAgent" parent="."]
avoidance_enabled = true

[node name="Movements" type="AnimationTree" parent="."]
tree_root = SubResource( 14 )
anim_player = NodePath("../Model/AnimationPlayer")
active = true
root_motion_track = NodePath("Sketchfab_model/5e8947753cfc405e9029b0383a8ca301fbx/Object_2/RootNode/Coyote/Main/DeformationSystem/Object_9/Skeleton:Root_M_01")
parameters/playback = SubResource( 15 )

[node name="DefenseSensor" type="Area" parent="."]

[node name="DefenseArea" type="CollisionShape" parent="DefenseSensor"]
transform = Transform( 1, 0, 0, 0, 0.005, 0, 0, 0, 1, 0, 0.0477894, 0.00349087 )
shape = SubResource( 17 )

[node name="AttackSensor" type="Area" parent="."]

[node name="AttackArea" type="CollisionShape" parent="AttackSensor"]
transform = Transform( 1, 0, 0, 0, 0.005, 0, 0, 0, 1, 0, 0.0477894, 0.00349087 )
shape = SubResource( 18 )

[node name="AttackTimer" type="Timer" parent="AttackSensor"]
wait_time = 1.2

[node name="FollowTimer" type="Timer" parent="."]
autostart = true

[connection signal="velocity_computed" from="Track" to="." method="_on_Track_velocity_computed"]
[connection signal="body_entered" from="DefenseSensor" to="." method="_on_DefenseSensor_body_entered"]
[connection signal="body_exited" from="DefenseSensor" to="." method="_on_DefenseSensor_body_exited"]
[connection signal="body_entered" from="AttackSensor" to="." method="_on_AttackSensor_body_entered"]
[connection signal="body_exited" from="AttackSensor" to="." method="_on_AttackSensor_body_exited"]
[connection signal="timeout" from="FollowTimer" to="." method="_on_FollowTimer_timeout"]
